--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <title>BeeGame</title>
 
+	
     <script type="text/javascript" src="lib/GBAPI.js"></script>
     <script type="text/javascript" src="lib/qwest.js"></script>
     <script type="text/javascript" src="lib/AES.js"></script>
-    <script type="text/javascript" src="pandajs.js?v=2"></script>
+	
+	<script type="text/javascript">
+	dt = (new Date).getTime();
+	document.write('<script type="text/javascript" src="pandajs.js?Version='+dt+'"><'+'/script>');
+	</script>
 </head>
 <body>
 
